# AL5D-LYNX

./: README.md  arm_simulator.cpp  armc_simulator.c  armc_simulator.h  guide_vrep.MD  handle_string.c
C/: demo
PYTHON/: demo.py  test.py  ufrn_al5d.py  ufrn_al5d2.py
PYTHON/__pycache__/: demo.py
PYTHON/backup/: ufrn_al5d.py
PYTHON/launch1/: demo.py  ufrn_al5d.py
drivers/C/: demo
drivers_al5d/C/: demo.c
drivers_al5d/PYTHON/: test.py
simulator/: demo.c
simulator/scene/: al5d_lynx.ttt  arm_test1_script.j1
simulator_al5d/: CMakeLists.txt  guide_vrep.MD
simulator_al5d/include/: armc_simulator.c
